<resources>
    <string name="app_name">Ouam\'s\'App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirmation</string>
    <string name="email">Email</string>
    <string name="signUp">Sign Up</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="edit">Edit</string>
    <string name="valid">Validate</string>
    <string name="list">List notes</string>
    <string name="action_add">add</string>
    <string name="newnote">New note</string>
    <string name="content">content</string>
    <string name="title">Title</string>
    <string name="title_activity_maps">Map</string>
    <string name="testGMap">Map</string>

</resources>
