<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.example.ouamar.ouamsapp.fragment.ViewNoteFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/titleEdit"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:maxLines="1"
                android:textSize="15dp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/contentEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/content"
                    android:minLines="20"
                    android:textSize="15dp" />

                <Button
                    android:id="@+id/valid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/valid" />
            </LinearLayout>
            </ScrollView>
        </LinearLayout>

</FrameLayout>
