<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/username"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/usernameSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:maxLines="1"
            android:hint="@string/username"
            android:paddingTop="15dp"
            android:textSize="15dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/emailSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:maxLines="1"
            android:hint="@string/email"
            android:paddingTop="15dp"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/confirmPasswordSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:maxLines="1"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingTop="15dp"
            android:textSize="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/confirmPassword"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/passwordSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:maxLines="1"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:paddingTop="15dp"
            android:textSize="15dp" />
    </LinearLayout>


    <Button
        android:id="@+id/validSignUp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signUp" />

</LinearLayout>
